add ability to fetch data

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       </div>
     </div>
     <div class="flex ml-7">
-      <input class="m-1 ml-3 songs" type="radio" id="html" name="lyrics" value="Songs">
-      <label class="pl-1" for="html">Songs</label><br>
-      <input class="m-1  ml-3 artists" type="radio" id="css" name="lyrics" value="Artists">
-      <label class="pl-1" for="css">Artists</label><br>
-      <input class="m-1  ml-3 album" type="radio" id="javascript" name="lyrics" value="Album">
-      <label class="pl-1" for="javascript">Album</label>
+      <input class="m-1 ml-3 songs" type="radio" id="songs" name="lyrics" value="Songs">
+      <label class="pl-1" for="songs">Songs</label><br>
+      <input class="m-1  ml-3 artists" type="radio" id="artists" name="lyrics" value="Artists">
+      <label class="pl-1" for="artists">Artists</label><br>
+      <input class="m-1  ml-3 albums" type="radio" id="albums" name="lyrics" value="Albums">
+      <label class="pl-1" for="albums">Albums</label>
     </div>
   </section>
     <section class="w-80 h-96 mt-4 bg-white">
