add ability to show search result in the results section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
     <!-- All dynamic pages coding goes here -->
   <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
-    <h2 class="pl-2 pt-2">Top 10 Songs from spotify</h2>
+    <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2>
   </section>
 
 
