--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- <div class="bg-white" id="left"></div> -->
   
     <!-- All dynamic pages coding goes here -->
-  <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
+  <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="  ">
     <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2>
   </section>
 
