--- a/listeners-graph.html
+++ b/listeners-graph.html
@@ -23,7 +23,11 @@
     <nav class="w-100 bg-cyan-800 h-11 text-white pt-2 pl-2"><h1>Music Slayers</h1></nav>
     <div class="flex h-500">
         <section class="w-80 h-32 mt-4 bg-white" id="graph-container">
-
+    <div id="chart_div"></div>
+      <br/>
+    <div id="btn-group">
+     
+    </div>
         </section>
     </div>
 
