--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <label class="pl-1" for="albums">Albums</label>
     </div>
   </section>
-    <section class="w-80 h-96 mt-4 bg-white">
-      <h2 class="pl-2 text-center">Billbord's Top 10</h2>
+    <section class="w-80 h-96 mt-4 bg-white" id="top10-container">
+      <h2 class="pl-2 text-center">Top 10 Global</h2>
     </section>
     </div>
     <!-- <div class="bg-white" id="left"></div> -->
