removed radio buttons and refactored codes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
   </head>
 
   <body class="bg-cyan-100">
-    <div>
-        <nav class="w-100 bg-cyan-800 h-11 text-white pt-2 pl-2"><h1>Music Slayers</h1></nav>
-        <div class="flex h-500">
+
+    <nav class="w-100 bg-cyan-800 h-11 text-white pt-2 pl-2">
+        <h1>Music Slayers</h1>
+    </nav>
+    <div class="flex h-500">
+        <div>
             <section class="w-80 h-32 mt-4 bg-white">
                 <h2 class="text-center mb-2">Search for Lyrics</h2>
                 <div class="flex justify-center">
-                    <!-- <div class="mb-3 xl:w-96"> -->
+                <!-- <div class="mb-3 xl:w-96"> -->
                     <div class="mb-3">
                         <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
                             <input type="search" class="form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
@@ -49,45 +52,42 @@
                 </div> -->
             </section>
             <section class="w-80 h-96 mt-4 bg-white" id="top10-container">
-                <h2 class="pl-2 text-center">Top 10 Global</h2>
+                <h2 class="pl-2 text-center">Global Top 10 Songs</h2>
             </section>
         </div>
         <!-- <div class="bg-white" id="left"></div> -->
     
         <!-- All dynamic pages coding goes here -->
         <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
-            <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2>
+            <h2 class="pl-2 pt-2" id="result-subtitle">Search Results from Spotify</h2>
         </section>
     </div>
 
-
     <!-- footer -->
-
     <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
         <div class="flex">
-        <p class="ml-9">Contact the team by email:</p>
+            <p class="ml-9">Contact the team by email:</p>
 
-        <address class="ml-9 ">
-            <a href="mailto:jim@rock.com">jim@rock.com</a><br>
-            <a href="tel:+13115552368">(311) 555-2368</a>
-        </address>
-        <p class="ml-9"> Address:</p>
+            <address class="ml-9 ">
+                <a href="mailto:jim@rock.com">jim@rock.com</a><br>
+                <a href="tel:+13115552368">(311) 555-2368</a>
+            </address>
+            <p class="ml-9"> Address:</p>
 
-        <address class="ml-9 ">
-            <p>University of toronto</p>
-            <p>abcd toronto toronto</p>
-            <p>L4L4L4</p> 
-            <p>canada</p>
-        </address>
+            <address class="ml-9 ">
+                <p>University of toronto</p>
+                <p>abcd toronto toronto</p>
+                <p>L4L4L4</p> 
+                <p>canada</p>
+            </address>    
+        </div>
         
-        </div>
-            <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
-        </div>
+        <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
     </footer>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
-</body>
+  </body>
 </html>
