adding local storage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <label class="pl-1" for="artists">Artists</label><br>
       <input class="m-1  ml-3 albums" type="radio" id="albums" name="lyrics" value="Albums">
       <label class="pl-1" for="albums">Albums</label>
+     
+    </div>
+     <!-- 5 most recent searches -->
+    <div class="recent_searches">
+      <button>Eminem</button>
     </div>
   </section>
     <section class="w-80 h-96 mt-4 bg-white" id="top10-container">
