styled the front page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <label class="pl-1" for="albums">Albums</label>
                 </div> -->
             <!-- </section> -->
+            <section class="history block w-full h-64 bg-white mt-4 p-4"> first hisrtory</section>
             <section class="topArtists w-80 h-full mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
                 <h2 class=" text-xl font-bold">Global Top 10 Songs</h2>
             </section>
