update html file

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2 class="pl-2 pt-2" id="result-subtitle">Search Results from Spotify</h2>
         </section>
     </div> -->
-    <section class="main w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
+    <section class="main w-full h-100 bg√-white ml-4 mt-4 mr-4" id="display-container">
 
         <!-- <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2> -->
 
