--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- this is the tailwindcss -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Music Slayers</title>
-</head>
+  </head>
 
-<body class="bg-cyan-100">
+  <body class="bg-cyan-100">
 
     <nav class="w-100 bg-cyan-800 h-12 text-white text-xl pt-1 pl-2 flex">
         <h1 class="pt-1 pl-1 w-2/5">Music Slayers</h1>
@@ -73,32 +79,27 @@
 </div>
     <!-- footer -->
     <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
-      <div class="flex">
-        <p class="ml-9">Contact the team by email:</p>
+        <div class="flex">
+            <p class="ml-9">Contact the team by email:</p>
 
-        <address class="ml-9">
-          <a href="mailto:jim@rock.com">jim@rock.com</a><br />
-          <a href="tel:+13115552368">(311) 555-2368</a>
-        </address>
-        <p class="ml-9">Address:</p>
+            <address class="ml-9 ">
+                <a href="mailto:jim@rock.com">jim@rock.com</a><br>
+                <a href="tel:+13115552368">(311) 555-2368</a>
+            </address>
+            <p class="ml-9"> Address:</p>
 
-        <address class="ml-9">
-          <p>University of toronto</p>
-          <p>abcd toronto toronto</p>
-          <p>L4L4L4</p>
-          <p>canada</p>
-        </address>
-      </div>
-
-      <p class="h-24 text-center mt-9 pt-6">
-        &copy; Copyright 2022 Music Slayers.inc
-      </p>
+            <address class="ml-9 ">
+                <p>University of toronto</p>
+                <p>abcd toronto toronto</p>
+                <p>L4L4L4</p> 
+                <p>canada</p>
+            </address>    
+        </div>
+        
+        <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
     </footer>
 
-    <script
-      type="text/javascript"
-      src="https://www.gstatic.com/charts/loader.js"
-    ></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
