additions in footer

--- a/index.html
+++ b/index.html
@@ -72,43 +72,62 @@
 
         </section>
     </div>
-    <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
-        <div class="flex">
-            <p class="ml-9">Contact the team by email: <br> </p>
-            <address class="ml-5 ">
-            <a href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a><br>
-            </address>
-            <p class="ml-9">Github githubAccount:</p>
-            <address class="ml-5 ">
-            <a href="https://github.com/Project01-Team14">GithubAccount</a>
-            </address>
-            <address class="ml-9 ">
-  
-    
-  </address>
-            <p class="ml-9"> Address:</p>
+    <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+        <div class="footerLeft pl-4 ">
+            <div class="flex">
+                <h2 class="w-32 text-left">Email Id :</h2>
+                <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
+            </div>
+            <div class="flex">
+                <h2 class="w-32 text-left ">Github Account :</h2>
+                <a class="ml-2 hover:bg-blue-900" href="https://github.com/Project01-Team14">GithubAccount</a>
+            </div>
+            <div class="flex ">
+                <p class="w-32 text-left ">Address :</p>
+                <p class="ml-2  ">1234 Music Slayers street<br> University of Toronto<br> Canada
+                </p>
+            </div>
 
-            <address class="ml-9 ">
+        </div>
+
+    </footer>
+    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0 ">
+        <div class="flex ">
+            <div class="flex ">
+                <p class="ml-9 ">Contact the team by email:</p>
+                <a class="mb-3 " href="mailto:githubprojects2022@gmail.com ">githubprojects2022@gmail.com</a>
+            </div>
+            <div class="flex ">
+            <address class="ml-5 flex ">
+                <p class="ml-9 ">Github Account  :</p>
+            <a href="https://github.com/Project01-Team14 ">GithubAccount</a>    
+            </address>
+            </div>
+            <div>
+                <div>
+                    <p class="ml-9 "> Address:</p>
+
+                    <address class="ml-9 ">
     <p>Music Slayers</p>
     <p>University of Toronto</p>
     <p>Canada</p>
   </address>
 
+                </div>
+                <p class="h-24 text-center mt-9 pt-6 ">&copy; Copyright 2022 Music Slayers.inc</p>
+            </div>
         </div>
-        <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
-        </div>
-
-    </footer>
+    </footer> -->
     <!-- footer -->
-    <!-- <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
-        <div class="flex">
-            <p class="ml-9">Contact the team by email:</p>
+    <!-- <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0 ">
+        <div class="flex ">
+            <p class="ml-9 ">Contact the team by email:</p>
 
             <address class="ml-9 ">
-                <a href="mailto:jim@rock.com">jim@rock.com</a><br>
-                <a href="tel:+13115552368">(311) 555-2368</a>
+                <a href="mailto:jim@rock.com ">jim@rock.com</a><br>
+                <a href="tel:+13115552368 ">(311) 555-2368</a>
             </address>
-            <p class="ml-9"> Address:</p>
+            <p class="ml-9 "> Address:</p>
 
             <address class="ml-9 ">
                 <p>University of toronto</p>
@@ -118,13 +137,13 @@
             </address>    
         </div>
         
-        <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p> -->
+        <p class="h-24 text-center mt-9 pt-6 ">&copy; Copyright 2022 Music Slayers.inc</p> -->
     <!-- </footer> -->
 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script type="text/javascript " src="https://www.gstatic.com/charts/loader.js "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js "></script>
+    <script src="./assets/js/script.js "></script>
 </body>
 
 </html>
