changes in footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <label class="pl-1" for="albums">Albums</label>
                 </div> -->
             <!-- </section> -->
-            <section class="search-history block w-full h-64 bg-white mt-4 p-4">
+            <section class="search-history block w-full h-full bg-white mt-4 p-4">
                 <h2 class=" text-xl font-bold">Most Recent 5 Searches</h2>
             </section>
             <section class="topArtists w-80 h-full mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
@@ -68,7 +68,7 @@
             <h2 class="pl-2 pt-2" id="result-subtitle">Search Results from Spotify</h2>
         </section>
     </div> -->
-        <section class="main w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
+        <section class="main w-full h-full bg-white ml-4 mt-4 mr-4" id="display-container">
 
             <!-- <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2> -->
 
