--- a/index.html
+++ b/index.html
@@ -21,66 +21,77 @@
 
   <body class="bg-cyan-100">
 
-    <nav class="w-100 bg-cyan-800 h-12 text-white text-xl pt-1 pl-2 flex">
+    <nav class="w-100 bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
         <h1 class="pt-1 pl-1 w-2/5">Music Slayers</h1>
         <div class="">
             <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
-                <input type="search" class="form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
+                <input type="search" class="songValue form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
                 <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center" type="button" id="button-addon2">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                         <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
                     </svg>
                 </button>
     </nav>
-    <div class="frontLeft flex h-100 ml-4">
-        <div>
-            <!-- <section class="w-80 h-32 mt-4 bg-white"> -->
-                <!-- <h2 class="text-center mb-2">Search for Lyrics</h2>
-                <div class="flex justify-center">
-                <div class="mb-3 xl:w-96"> -->
-                    <!-- <div class="mb-3">
-                        <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
-                            <input type="search" class="form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
-                            <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center" type="button" id="button-addon2">
-                                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                    <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="flex ml-7">
-                <input class="m-1 ml-3 songs" type="radio" id="songs" name="lyrics" value="Songs">
-                <label class="pl-1" for="songs">Songs</label>
-                <br>
-                <input class="m-1  ml-3 artists" type="radio" id="artists" name="lyrics" value="Artists">
-                <label class="pl-1" for="artists">Artists</label><br>
-                <input class="m-1  ml-3 albums" type="radio" id="albums" name="lyrics" value="Albums">
-                <label class="pl-1" for="albums">Albums</label>
-                </div> -->
-            <!-- </section> -->
+    <div class="frontLeft flex md:ml-4">
+        <div class="hidden h-full  md:block">
             <section class="search-history block w-full h-64 bg-white mt-4 p-4">
                 <h2 class=" text-xl font-bold">Most Recent 5 Searches</h2>
             </section>
-            <section class="topArtists w-80 h-full mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
+            <section class="topArtists w-80 h-100 mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
                 <h2 class=" text-xl font-bold">Global Top 10 Songs</h2>
             </section>
         </div>
-        <!-- <div class="bg-white" id="left"></div> -->
-    
-        <!-- All dynamic pages coding goes here -->
-        <!-- <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
-            <h2 class="pl-2 pt-2" id="result-subtitle">Search Results from Spotify</h2>
+        <section class="main overflow-auto w-full h-full bg-white md:ml-4 mt-4 md:mr-4" id="display-container">
         </section>
-    </div> -->
-    <section class="main w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
+    </div>
+    <footer id="contact-me" class=" w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+        <h2 class="text-center">Contact Me</h2>
+        <div class="footer-links ">
+          <ul class="flex Class flex justify-around ">
+            <li class="">
+              <a href="http://www.skype.com/" target="_blank">555.555.555</a>
+            </li>
+            <li>
+              <a href="mailto:katoch.senthal@hotmail.com" target="_blank"
+                >senthol.kumar@hotmail.com</a
+              >
+            </li>
+            <li>
+              <a href="http://www.github.com/" target="_blank">GitHub</a>
+            </li>
+            <li>
+              <a href="http://www.twitter.com/" target="_blank">Twitter</a>
+            </li>
+            <li>
+              <a href="http://www.linkedin.com/" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+              <a href="#">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+        <div class="footerLeft pl-4 ">
+            <div class="flex">
+                <h2 class="w-32 text-left">Email Id :</h2>
+                <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
+            </div>
+            <div class="flex">
+                <h2 class="w-32 text-left ">Github Account :</h2>
+                <a class="ml-2 hover:bg-blue-900" href="https://github.com/Project01-Team14%22%3EGithubAccount"></a>
+            </div>
+            <div class="flex ">
+                <p class="w-32 text-left ">Address :</p>
+                <p class="ml-2  ">1234 Music Slayers street<br> University of Toronto<br> Canada
+                </p>
+            </div>
 
+        </div>
 
-        <!-- <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2> -->
-    </section>
-</div>
+    </footer> -->
     <!-- footer -->
-    <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+    <!-- <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
         <div class="flex">
             <p class="ml-9">Contact the team by email:</p>
 
@@ -99,7 +110,7 @@
         </div>
         
         <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
-    </footer>
+    </footer> -->
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
