--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -16,12 +17,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
+     <link rel="icon" type="image-icon" href="assets/images/logo_transparent.png">
     <title>Music Slayers</title>
   </head>
 
   <body class="bg-cyan-100">
 
     <nav class="w-100 bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
+      <img src="assets/images/logo_transparent.png" alt="logo"/>
         <h1 class="pt-1 pl-1 w-2/5">Music Slayers</h1>
         <div class="">
             <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
