committing existing changes

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
         </section>
     </div>
-    <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
-        <div class="footerLeft pl-4 ">
-            <div class="flex">
-                <h2 class="w-32 text-left">Email Id :</h2>
-                <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
+    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0"> -->
+    <!-- <div class="footerLeft pl-4 "> -->
+    <!-- <div class="flex"> -->
+    <!-- <h2 class="w-32 text-left">Email Id :</h2> -->
+    <!-- <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
             </div>
             <div class="flex">
                 <h2 class="w-32 text-left ">Github Account :</h2>
@@ -90,9 +90,9 @@
                 </p>
             </div>
 
-        </div>
+        </div> -->
 
-    </footer>
+    <!-- </footer> -->
     <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0 ">
         <div class="flex ">
             <div class="flex ">
@@ -141,6 +141,30 @@
         
         <p class="h-24 text-center mt-9 pt-6 ">&copy; Copyright 2022 Music Slayers.inc</p> -->
     <!-- </footer> -->
+    <footer id="contact-me" class=" w-100 h-80 md:h-64 bg-cyan-600 mt-7 text-white pt-5">
+        <!-- <h2 class="text-left">Contact Us</h2> -->
+        <div class="footer-links ">
+            <ul class="ml-2  md:flex md:justify-around ">
+                <li class="">
+                    <a href="http://www.skype.com/" target="_blank">555.555.555</a>
+                </li>
+                <li>
+                    <a href="mailto:githubprojects2022@gmail.com" target="_blank">githubprojects2022@gmail.com</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/Project01-Team14%22%3EGithubAccount" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <a href="http://www.twitter.com/" target="_blank">Twitter</a>
+                </li>
+                <li>
+                    <a href="http://www.linkedin.com/" target="_blank">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+        <p class="h-24 text-center mt-9 pt-6 p-0">&copy; Copyright 2022 Music Slayers.inc</p>
+    </footer>
 
     <script type="text/javascript " src="https://www.gstatic.com/charts/loader.js "></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
