very recent changes

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <body class="bg-cyan-100">
 
-    <nav class="w-100 bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
-        <h1 class="pt-1 pl-1 w-2/5">Music Slayers</h1>
-        <div class="">
+    <nav class="w-100 md:bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
+        <h1 class="w-full pt-1 pl-1  bg-cyan-800 md:bg-none  md:w-2/5" >Music Slayers</h1>
+        <div class="m-4 bg-cyan-100 md:m-0 md:bg-cyan-800">
             <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
                 <input type="search" class="songValue form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
                 <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center" type="button" id="button-addon2">
@@ -32,32 +32,32 @@
                     </svg>
                 </button>
     </nav>
-    <div class="frontLeft flex md:ml-4">
-        <div class="hidden h-full  md:block">
+    <div class=" blockfrontLeft md:flex md:ml-4">
+        <div class=" h-full  md:block">
             <section class="search-history block w-full h-64 bg-white mt-4 p-4">
                 <h2 class=" text-xl font-bold">Most Recent 5 Searches</h2>
             </section>
-            <section class="topArtists w-80 h-100 mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
+            <section class="hidden md:block topArtists w-80 h-100 mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
                 <h2 class=" text-xl font-bold">Global Top 10 Songs</h2>
             </section>
         </div>
         <section class="main overflow-auto w-full h-full bg-white md:ml-4 mt-4 md:mr-4" id="display-container">
         </section>
     </div>
-    <footer id="contact-me" class=" w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
-        <h2 class="text-center">Contact Me</h2>
+    <footer id="contact-me" class=" w-100 h-80 md:h-64 bg-cyan-600 mt-7 text-white pt-5">
+        <!-- <h2 class="text-left">Contact Us</h2> -->
         <div class="footer-links ">
-          <ul class="flex Class flex justify-around ">
+          <ul class="ml-2  md:flex md:justify-around ">
             <li class="">
               <a href="http://www.skype.com/" target="_blank">555.555.555</a>
             </li>
             <li>
-              <a href="mailto:katoch.senthal@hotmail.com" target="_blank"
-                >senthol.kumar@hotmail.com</a
+              <a href="mailto:githubprojects2022@gmail.com" target="_blank"
+                >githubprojects2022@gmail.com</a
               >
             </li>
             <li>
-              <a href="http://www.github.com/" target="_blank">GitHub</a>
+              <a href="https://github.com/Project01-Team14%22%3EGithubAccount" target="_blank">GitHub</a>
             </li>
             <li>
               <a href="http://www.twitter.com/" target="_blank">Twitter</a>
@@ -65,11 +65,9 @@
             <li>
               <a href="http://www.linkedin.com/" target="_blank">LinkedIn</a>
             </li>
-            <li>
-              <a href="#">Resume</a>
-            </li>
           </ul>
         </div>
+        <p class="h-24 text-center mt-9 pt-6 p-0">&copy; Copyright 2022 Music Slayers.inc</p>
       </footer>
     <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
         <div class="footerLeft pl-4 ">
