--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Music Slayers</title>
+    <link rel="icon" type="image/icon" href="assets/images/logo_transparent.png">
   </head>
 
   <body class="bg-cyan-100">
 
     <nav class="w-100 md:bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
+          <img src="assets/images/logo_transparent.png" alt="logo" />
         <h1 class="w-full pt-1 pl-1  bg-cyan-800 md:bg-none  md:w-2/5" >Music Slayers</h1>
         <div class="m-4 bg-cyan-100 md:m-0 md:bg-cyan-800">
             <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
