--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Music Slayers</title>
+    <link rel="icon" type="image/icon" href="assets/images/logo_transparent.png">
 </head>
 
 <body class="bg-cyan-100">
 
-    <nav class="w-100 bg-cyan-800 h-12 text-white text-xl pt-1 pl-2 flex">
-        <h1 class="pt-1 pl-1 w-2/5">Music Slayers</h1>
-        <div class="">
+    <nav class="w-100 md:bg-cyan-800 md:h-12 text-white text-xl pt-1 md:pl-2 md:flex">
+        <img src="assets/images/logo_transparent.png" alt="logo" />
+        <h1 class="w-full pt-1 pl-1  bg-cyan-800 md:bg-none  md:w-2/5">Music Slayers</h1>
+        <div class="m-4 bg-cyan-100 md:m-0 md:bg-cyan-800">
             <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
-                <input type="search" class="form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                <input type="search" class="songValue form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                     placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
                 <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center"
                     type="button" id="button-addon2">
@@ -27,62 +29,51 @@
                     </svg>
                 </button>
     </nav>
-    <div class="frontLeft flex h-100 ml-4">
-        <div>
-            <!-- <section class="w-80 h-32 mt-4 bg-white"> -->
-            <!-- <h2 class="text-center mb-2">Search for Lyrics</h2>
-                <div class="flex justify-center">
-                <div class="mb-3 xl:w-96"> -->
-            <!-- <div class="mb-3">
-                        <div class="input-group relative flex flex-wrap items-stretch w-full mb-4">
-                            <input type="search" class="form-control relative flex-auto min-w-0 block w-48 px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search by" aria-describedby="button-addon2">
-                            <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center" type="button" id="button-addon2">
-                                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                    <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
-            <!-- <div class="flex ml-7">
-                <input class="m-1 ml-3 songs" type="radio" id="songs" name="lyrics" value="Songs">
-                <label class="pl-1" for="songs">Songs</label>
-                <br>
-                <input class="m-1  ml-3 artists" type="radio" id="artists" name="lyrics" value="Artists">
-                <label class="pl-1" for="artists">Artists</label><br>
-                <input class="m-1  ml-3 albums" type="radio" id="albums" name="lyrics" value="Albums">
-                <label class="pl-1" for="albums">Albums</label>
-                </div> -->
-            <!-- </section> -->
-            <section class="search-history block w-full h-full bg-white mt-4 p-4">
+    <div class=" blockfrontLeft md:flex md:ml-4">
+        <div class=" h-full  md:block">
+            <section class="search-history block w-full h-64 bg-white mt-4 p-4 ">
                 <h2 class=" text-xl font-bold">Most Recent 5 Searches</h2>
             </section>
-            <section class="topArtists w-80 h-full mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
+            <section class="hidden md:block topArtists w-80 h-100 mt-4 mb-4 bg-white pt-3 pl-4" id="top10-container">
                 <h2 class=" text-xl font-bold">Global Top 10 Songs</h2>
             </section>
         </div>
-        <!-- <div class="bg-white" id="left"></div> -->
-
-        <!-- All dynamic pages coding goes here -->
-        <!-- <section class="w-full h-100 bg-white ml-4 mt-4 mr-4" id="display-container">
-            <h2 class="pl-2 pt-2" id="result-subtitle">Search Results from Spotify</h2>
-        </section>
-    </div> -->
-        <section class="main w-full h-full bg-white ml-4 mt-4 mr-4" id="display-container">
-
-            <!-- <h2 class="pl-2 pt-2" id="result-subtitle">Top 10 Songs from spotify</h2> -->
-
+        <section class="main overflow-auto w-full h-full bg-white md:ml-4 mt-4 md:mr-4" id="display-container">
         </section>
     </div>
-    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0"> -->
-    <!-- <div class="footerLeft pl-4 "> -->
-    <!-- <div class="flex"> -->
-    <!-- <h2 class="w-32 text-left">Email Id :</h2> -->
-    <!-- <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
+    <footer id="contact-me" class=" w-100 h-80 md:h-64 bg-cyan-600 mt-7 text-white pt-5">
+        <!-- <h2 class="text-left">Contact Us</h2> -->
+        <div class="footer-links ">
+            <ul class="ml-2  md:flex md:justify-around ">
+                <li class="hover:bg-sky-300 py-3 px-4 rounded-full hover:text-black">
+                    <a href="http://www.skype.com/" target="_blank">skype</a>
+                </li>
+                <li class="hover:bg-sky-300 py-3 px-4 rounded-full hover:text-black">
+                    <a href="mailto:githubprojects2022@gmail.com" target="_blank">githubprojects2022@gmail.com</a
+              >
+            </li>
+            <li class="hover:bg-sky-300 py-3 px-4 rounded-full hover:text-black">
+              <a href="https://github.com/Project01-Team14%22%3EGithubAccount" target="_blank">GitHub</a>
+                </li>
+                <li class="hover:bg-sky-300 py-3 px-4 rounded-full hover:text-black">
+                    <a href="http://www.twitter.com/" target="_blank">Twitter</a>
+                </li>
+                <li class="hover:bg-sky-300 py-3 px-4 rounded-full hover:text-black">
+                    <a href="http://www.linkedin.com/" target="_blank">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+        <p class="h-24 text-center mt-9 pt-6 p-0">&copy; Copyright 2022 Music Slayers.inc</p>
+    </footer>
+    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+        <div class="footerLeft pl-4 ">
+            <div class="flex">
+                <h2 class="w-32 text-left">Email Id :</h2>
+                <a class="mb-3 ml-2 hover:bg-blue-900" href="mailto:githubprojects2022@gmail.com">githubprojects2022@gmail.com</a>
             </div>
             <div class="flex">
                 <h2 class="w-32 text-left ">Github Account :</h2>
-                <a class="ml-2 hover:bg-blue-900" href="https://github.com/Project01-Team14">GithubAccount</a>
+                <a class="ml-2 hover:bg-blue-900" href="https://github.com/Project01-Team14%22%3EGithubAccount"></a>
             </div>
             <div class="flex ">
                 <p class="w-32 text-left ">Address :</p>
@@ -90,40 +81,13 @@
                 </p>
             </div>
 
-        </div> -->
-
-    <!-- </footer> -->
-    <!-- <footer class="flex w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0 ">
-        <div class="flex ">
-            <div class="flex ">
-                <p class="ml-9 ">Contact the team by email:</p>
-                <a class="mb-3 " href="mailto:githubprojects2022@gmail.com ">githubprojects2022@gmail.com</a>
-            </div>
-            <div class="flex ">
-            <address class="ml-5 flex ">
-                <p class="ml-9 ">Github Account  :</p>
-            <a href="https://github.com/Project01-Team14 ">GithubAccount</a>    
-            </address>
-            </div>
-            <div>
-                <div>
-                    <p class="ml-9 "> Address:</p>
-
-                    <address class="ml-9 ">
-    <p>Music Slayers</p>
-    <p>University of Toronto</p>
-    <p>Canada</p>
-  </address>
-
-                </div>
-                <p class="h-24 text-center mt-9 pt-6 ">&copy; Copyright 2022 Music Slayers.inc</p>
-            </div>
         </div>
+
     </footer> -->
     <!-- footer -->
-    <!-- <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0 ">
-        <div class="flex ">
-            <p class="ml-9 ">Contact the team by email:</p>
+    <!-- <footer class="w-100 h-64 bg-cyan-600 mt-7 text-white pt-5 mb-0">
+        <div class="flex">
+            <p class="ml-9">Contact the team by email:</p>
 
             <address class="ml-9 ">
                 <a href="mailto:jim@rock.com ">jim@rock.com</a><br>
@@ -139,32 +103,8 @@
             </address>    
         </div>
         
-        <p class="h-24 text-center mt-9 pt-6 ">&copy; Copyright 2022 Music Slayers.inc</p> -->
-    <!-- </footer> -->
-    <footer id="contact-me" class=" w-100 h-80 md:h-64 bg-cyan-600 mt-7 text-white pt-5">
-        <!-- <h2 class="text-left">Contact Us</h2> -->
-        <div class="footer-links ">
-            <ul class="ml-2  md:flex md:justify-around ">
-                <li class="">
-                    <a href="http://www.skype.com/" target="_blank">555.555.555</a>
-                </li>
-                <li>
-                    <a href="mailto:githubprojects2022@gmail.com" target="_blank">githubprojects2022@gmail.com</a
-              >
-            </li>
-            <li>
-              <a href="https://github.com/Project01-Team14%22%3EGithubAccount" target="_blank">GitHub</a>
-                </li>
-                <li>
-                    <a href="http://www.twitter.com/" target="_blank">Twitter</a>
-                </li>
-                <li>
-                    <a href="http://www.linkedin.com/" target="_blank">LinkedIn</a>
-                </li>
-            </ul>
-        </div>
-        <p class="h-24 text-center mt-9 pt-6 p-0">&copy; Copyright 2022 Music Slayers.inc</p>
-    </footer>
+        <p class="h-24 text-center mt-9 pt-6">&copy; Copyright 2022 Music Slayers.inc</p>
+    </footer> -->
 
     <script type="text/javascript " src="https://www.gstatic.com/charts/loader.js "></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
